--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,10 @@
+/* Variable Sass */
 /* Remix Icon */
 @import url("https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css");
 /* Bootstrap */
 @import url("https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css");
 /* G font */
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap");
-/* Variables */
 /* CSS Reset */
 *, *, *:after, *:before {
   margin: 0;
