--- a/css/style.sass
+++ b/css/style.sass
@@ -1,3 +1,6 @@
+/* Variable Sass */
+@import variables    
+    
 /* Remix Icon */
 @import url('https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css')
 
@@ -7,15 +10,6 @@
 /* G font */
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap')
 
-
-/* Variables */
-$font: 'Roboto', sans-serif
-$blk: #000000
-$g: #f1f3f6
-$lg: #F2F2F2
-$w: #fff
-$b: #00B3FE
-$db: #384452
 
 /* CSS Reset */
 *,*,*:after,*:before
@@ -31,14 +25,14 @@ $db: #384452
         box-shadow: none !important
 
 ::selection
-    background-color: $w
-    color: $b
+    background-color: $whiteColor
+    color: $blackColor
 
 html,body
     font-family: $font
     font-weight: 400
     scroll-behavior: smooth
-    color: $blk
+    color: $blackColorlackColor
     font-size: 16px
     overflow-x: hidden
     @media (max-width: 768px)
@@ -51,11 +45,11 @@ div,header,nav,footer,section,aside,article
     display: block
 
 a
-    color: $b
+    color: $blackColor
     text-decoration: none
     &:hover
         text-decoration: none
-        color: $b
+        color: $blackColor
 
 p
     color: #666666
@@ -81,7 +75,7 @@ svg
 /* Components */
 header
     box-shadow: 0px 8px 24px rgba(0, 0, 0, 0.1)
-    background-color: $w
+    background-color: $whiteColor
     padding: 10px
     a
         color: #7E7E7E
@@ -107,7 +101,7 @@ header
     .input
         display: flex
         max-height: 45px
-        background-color: $g
+        background-color: $lightGreay
         border-radius: 34px
         justify-content: space-between
         padding-left: 15px
@@ -135,10 +129,10 @@ header
             display: inline-block
             border-radius: 50%
             border: none
-            background-color: $db
-            color: $w
+            background-color: $darkBlueColor
+            color: $whiteColor
             i
-                font-size: $w
+                font-size: $whiteColor
 
 .search.inner
     min-height: unset
@@ -158,7 +152,7 @@ header
     .input
         display: flex
         max-height: 45px
-        background-color: $g
+        background-color: $lightGreay
         border-radius: 34px
         justify-content: space-between
         padding-left: 15px
@@ -188,10 +182,10 @@ header
             display: inline-block
             border-radius: 50%
             border: none
-            background-color: $db
-            color: $w
+            background-color: $darkBlueColor
+            color: $whiteColor
             i
-                font-size: $w
+                font-size: $whiteColor
 
 .result
     @media (max-width: 576px)
@@ -259,7 +253,7 @@ header
         .content
             .title
                 h1,h2,h3,h4,h5,h6
-                    color: $b
+                    color: $blackColor
                     font-size: 18px
                     font-weight: bold
                     text-decoration: underline
@@ -278,7 +272,7 @@ header
                         vertical-align: middle
                     span
                         font-size: 12px
-                        color: $blk
+                        color: $blackColorlackColor
                         vertical-align: middle
                         margin-left: 5px
                 .catagory
@@ -291,7 +285,7 @@ header
                         display: grid
                         font-size: 20px
                         place-content: center
-                        background-color: $g
+                        background-color: $lightGreay
                         border-radius: 8px
                         margin-right: 15px
                 .address
@@ -304,7 +298,7 @@ header
                         display: grid
                         font-size: 20px
                         place-content: center
-                        background-color: $g
+                        background-color: $lightGreay
                         border-radius: 8px
                         margin-right: 15px
             .details
@@ -320,8 +314,8 @@ header
                 i
                     display: grid
                     place-content: center
-                    background-color: $b
-                    color: $w
+                    background-color: $blackColor
+                    color: $whiteColor
                     border-radius: 8px
                     width: 30px
                     height: 30px
@@ -339,14 +333,14 @@ header
                 flex-wrap: wrap
                 span
                     font-size: 13px
-                    background-color: $g
+                    background-color: $lightGreay
                     padding: 2px 10px
                     margin-right: 10px
                     border-radius: 24px
                     cursor: pointer
                     &:hover
-                        background-color: $b
-                        color: $w 
+                        background-color: $blackColor
+                        color: $whiteColor 
         .slide
             img
                 max-height: 220px
@@ -376,24 +370,24 @@ header
         li
             margin: 0 10px
         .arrow
-            background-color: $db
+            background-color: $darkBlueColor
             display: grid
             place-content: center
             width: 26px
             height: 26px
-            color: $w
+            color: $whiteColor
             border-radius: 8px
             a
-                color: $w
+                color: $whiteColor
         .number
             a
-                color: $db
+                color: $darkBlueColor
         .number.active
-            background-color: $b
+            background-color: $blackColor
             display: grid
             place-content: center
             width: 40px
             height: 40px
             border-radius: 8px
             a
-                color: $w
+                color: $whiteColor
