--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,7 @@ html, body {
   font-family: "Roboto", sans-serif;
   font-weight: 400;
   scroll-behavior: smooth;
-  color: #000000;
+  color: #00B3FE;
   font-size: 16px;
   overflow-x: hidden;
 }
@@ -368,7 +368,7 @@ header a {
 
 .result .result-item .content .business-contact .rating span {
   font-size: 12px;
-  color: #000000;
+  color: #00B3FE;
   vertical-align: middle;
   margin-left: 5px;
 }
