--- a/css/style.sass
+++ b/css/style.sass
@@ -32,7 +32,7 @@ html,body
     font-family: $font
     font-weight: 400
     scroll-behavior: smooth
-    color: $blackColorlackColor
+    color: $blackColor
     font-size: 16px
     overflow-x: hidden
     @media (max-width: 768px)
@@ -272,7 +272,7 @@ header
                         vertical-align: middle
                     span
                         font-size: 12px
-                        color: $blackColorlackColor
+                        color: $blackColor
                         vertical-align: middle
                         margin-left: 5px
                 .catagory
