--- a/css/style.sass
+++ b/css/style.sass
@@ -252,8 +252,8 @@ header
     .result-item
         .content
             .title
-                h1,h2,h3,h4,h5,h6
-                    color: $blackColor
+                h1,h2,h3,h4,h5,h6,a
+                    color: $blueColor
                     font-size: 18px
                     font-weight: bold
                     text-decoration: underline
@@ -314,7 +314,7 @@ header
                 i
                     display: grid
                     place-content: center
-                    background-color: $blackColor
+                    background-color: $blueColor
                     color: $whiteColor
                     border-radius: 8px
                     width: 30px
@@ -339,7 +339,7 @@ header
                     border-radius: 24px
                     cursor: pointer
                     &:hover
-                        background-color: $blackColor
+                        background-color: $blueColor
                         color: $whiteColor 
         .slide
             img
@@ -383,7 +383,7 @@ header
             a
                 color: $darkBlueColor
         .number.active
-            background-color: $blackColor
+            background-color: $blueColor
             display: grid
             place-content: center
             width: 40px
