--- a/css/variables.sass
+++ b/css/variables.sass
@@ -1,7 +1,7 @@
 $font: 'Roboto', sans-serif
-$blackColorlackColor: #000000
 $lightGreay: #f1f3f6
 $lighterGrey: #F2F2F2
 $whiteColor: #fff
-$blackColor: #00B3FE
+$blackColor: #293543
 $darkBlueColor: #384452
+$blueColor: #00B3FE
