--- a/css/style.css
+++ b/css/style.css
@@ -21,14 +21,14 @@
 
 ::selection {
   background-color: #fff;
-  color: #00B3FE;
+  color: #293543;
 }
 
 html, body {
   font-family: "Roboto", sans-serif;
   font-weight: 400;
   scroll-behavior: smooth;
-  color: #00B3FE;
+  color: #293543;
   font-size: 16px;
   overflow-x: hidden;
 }
@@ -50,13 +50,13 @@ div, header, nav, footer, section, aside, article {
 }
 
 a {
-  color: #00B3FE;
+  color: #293543;
   text-decoration: none;
 }
 
 a:hover {
   text-decoration: none;
-  color: #00B3FE;
+  color: #293543;
 }
 
 p {
@@ -340,7 +340,7 @@ header a {
   border: 0;
 }
 
-.result .result-item .content .title h1, .result .result-item .content .title h2, .result .result-item .content .title h3, .result .result-item .content .title h4, .result .result-item .content .title h5, .result .result-item .content .title h6 {
+.result .result-item .content .title h1, .result .result-item .content .title h2, .result .result-item .content .title h3, .result .result-item .content .title h4, .result .result-item .content .title h5, .result .result-item .content .title h6, .result .result-item .content .title a {
   color: #00B3FE;
   font-size: 18px;
   font-weight: bold;
@@ -368,7 +368,7 @@ header a {
 
 .result .result-item .content .business-contact .rating span {
   font-size: 12px;
-  color: #00B3FE;
+  color: #293543;
   vertical-align: middle;
   margin-left: 5px;
 }
